--- a/style.css
+++ b/style.css
@@ -1,11 +1,18 @@
 body {
-	margin:0;
-	padding:0;
+    margin: 0;
+    padding: 0;
+}
+
+header {
+    background: url("bleu05.jpg");
+    background-size: cover;
 }
 
 h1 {
-	font-family:sans-serif;
-	margin-left:10px;
+    font-family: sans-serif;
+    margin: 0;
+    padding-left: 10px;
+    vertical-align: middle;
 }
 
 ::selection {
@@ -14,29 +21,36 @@ h1 {
 }
 
 #nav {
-	padding:0;
+    padding: 0;
 }
 
-#nav div {
-	display:inline-block;
-	width:25%;
-	text-align:center;
-	margin:0px;
-	padding:5px 0px;
-	font-family:sans-serif;
-	background:black;
-	color:white;
-	cursor:pointer;
-	transition:.5s;
+#nav ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
 }
 
-#nav div:hover {
-	background:rgba(100,100,100,.7);
+#nav li {
+    display: inline-block;
+    width: 25%;
+    float: left;
+    text-align: center;
+    margin: 0px;
+    padding: 5px 0px;
+    font-family: sans-serif;
+    background: black;
+    color: white;
+    cursor: pointer;
+    transition: .2s;
 }
 
-#nav div a {
-	color:white;
-	text-decoration:none;
+#nav li:hover {
+    background: rgba(100, 100, 100, .7);
+}
+
+#nav li a {
+    color: white;
+    text-decoration: none;
 }
 
 div {
@@ -46,76 +60,83 @@ div {
     -moz-user-select: none;
 }
 
-#dispD {
-	font-size:25px;
-	padding:4px;
+#toggleDiapo {
+    font-size: 25px;
+    padding: 4px 8px;
+    background: rgb(50, 50, 200);
+    color: white;
+    display: inline-block;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: .2s;
+}
+
+#toggleDiapo:hover {
+    background: rgb(50, 0, 200);
 }
 
 #count {
-	text-align:center;
+    text-align: center;
 }
 
 #diapo {
-	margin: 0 auto;
-	width:50%;
-	display:inline-block;
-	margin-left:30%;
-	background:white;
-	position:relative;
+    margin: 0 auto;
+    width: 50%;
+    background: white;
+    position: relative;
 }
 
 .button {
-	display:inline-block;
-	font-family:sans-serif;
-	cursor:pointer;
-	color:black;
-	text-align:center;
-	border:2px black solid;
-	background-color:rgb(240, 240, 240);
-	transition:0.5s;
+    display: inline-block;
+    font-family: sans-serif;
+    font-size: 50px;
+    cursor: pointer;
+    color: black;
+    text-align: center;
+    border-radius: 100%;
+    transform: scale(1);
+    transition: 0.5s;
 }
 
 .button:hover {
-	color:white;
-	background-color:black;
-	border-color:rgb(240, 240, 240);
+    color: white;
+    border-color: transparent;
 }
 
-#diapo .button {
-	width:8%;
-	font-size:50px;
-	border:2px aqua solid;
-	color:black;
-	background-color:rgb(200, 200, 200);
-	position:relative;
-	padding:5%;
+#prev,
+#next {
+    width: 8%;
+    height: 8%;
+    color: black;
+    position: relative;
+    padding: 5%;
 }
 
-#diapo .button:hover {
-	background-color:aqua;
-	color:black;
-	border-color:rgb(200, 200, 200);
+#prev:hover,
+#next:hover {
+    transform: scale(1.3);
 }
 
 #image {
-	display:inline-block;
-	width:40%;
+    display: inline-block;
+    width: 40%;
 }
 
 section {
-	padding:1px 20px;
-	background:linear-gradient(135deg, rgb(200,200,200),white);
+    padding: 1px 20px;
+    background: linear-gradient(135deg, rgb(200, 200, 200), white);
 }
 
 section h2 {
-	font-family:sans-serif;
-	text-decoration:underline;
+    font-family: sans-serif;
+    text-decoration: underline;
 }
 
 section p {
-	font-family:sans-serif;
+    font-family: sans-serif;
 }
+
 footer {
-	font-family:sans-serif;
-	padding:10px;
+    font-family: sans-serif;
+    padding: 10px;
 }
