--- a/style.css
+++ b/style.css
@@ -20,7 +20,8 @@ h1 {
     background: inherit !important;
 }
 
-#nav {
+
+/*#nav {
     padding: 0;
 }
 
@@ -30,7 +31,7 @@ h1 {
     padding: 0;
 }
 
-#nav li {
+#nav>ul>li>span {
     display: inline-block;
     width: 25%;
     float: left;
@@ -44,13 +45,77 @@ h1 {
     transition: .2s;
 }
 
-#nav li:hover {
+#nav>ul>li>span:hover {
     background: rgba(100, 100, 100, .7);
 }
 
-#nav li a {
+#nav ul li ul {
+    background: red;
+    float: left;
+}*/
+
+nav ul {
+    margin: 0;
+    padding: 0;
+    list-style-type: none;
+    text-align: center;
+    cursor: pointer;
+    font-family: sans-serif;
+}
+
+nav>ul>li {
+    float: left;
+    margin: auto;
+    padding: 0;
+    background-color: black;
+    color: white;
+    width: 25%;
+    border-bottom: 2px solid black;
+}
+
+nav>ul>li:hover {
+    border-bottom: 2px solid blue;
+}
+
+nav ul ul {
+    background-color: black;
+    color: white;
+    width: 25%;
+    text-align: center;
+}
+
+nav li span {
+    display: block;
+    width: 100%;
     color: white;
     text-decoration: none;
+    padding: 5px;
+}
+
+nav li span {
+    color: white;
+    text-decoration: none;
+}
+
+nav ul li ul {
+    display: none;
+    position: absolute;
+}
+
+nav ul li:hover ul {
+    display: block;
+}
+
+nav ul li {
+    transition: .5s;
+}
+
+nav ul li:hover {
+    background: rgba(100, 100, 255, 1) !important;
+}
+
+nav li:hover ul li {
+    float: none;
 }
 
 div {
