--- a/style.css
+++ b/style.css
@@ -100,6 +100,8 @@ div {
 #count {
     text-align: center;
     position: relative;
+    width: 300px;
+    margin: 0 auto;
 }
 
 #diapo {
@@ -139,7 +141,7 @@ div {
 
 #image {
     display: inline-block;
-    width: 20%;
+    width: 90%;
 }
 
 section {
