--- a/style.css
+++ b/style.css
@@ -17,6 +17,12 @@ h1 {
     vertical-align: middle;
 }
 
+header h4 {
+    padding-left: 10px;
+    font-family: sans-serif;
+    margin: 0;
+}
+
 h3 {
     font-family: sans-serif;
 }
