--- a/style.css
+++ b/style.css
@@ -50,8 +50,13 @@ h3 {
     margin: 0px;
     font-family: sans-serif;
     background: darkblue;
+    border-bottom: 3px solid darkblue;
     color: white;
     cursor: pointer;
+}
+
+#nav>ul>li:hover {
+    border-bottom: 3px solid yellow;
 }
 
 #nav>ul>li>a {
@@ -71,6 +76,7 @@ h3 {
     background: darkblue;
     width: 25%;
     box-shadow: 5px 5px 10px black;
+    margin-top: 3px;
 }
 
 
