--- a/style.css
+++ b/style.css
@@ -1,7 +1,8 @@
 body {
     margin: 0;
     padding: 0;
-    background: linear-gradient(to right, #ada996, #f2f2f2, #dbdbdb, #eaeaea);
+    /*background: linear-gradient(to right, #ada996, #f2f2f2, #dbdbdb, #eaeaea);*/
+    background: linear-gradient(to right, #c9d6ff, #e2e2e2);
 }
 
 header {
