--- a/style.css
+++ b/style.css
@@ -66,6 +66,10 @@ h3 {
     padding: 5px 0px;
 }
 
+#nav ul li ul li {
+    padding: 5px 0px;
+}
+
 #nav>ul>li:hover>a,
 #nav ul li ul li:hover {
     background: midnightblue;
