--- a/style.css
+++ b/style.css
@@ -67,13 +67,15 @@ h3 {
     padding: 5px 0px;
 }
 
-#nav ul li ul li {
+#nav ul li ul a {
+    transition: .5s;
+    display: block;
     padding: 5px 0px;
 }
 
 #nav>ul>li:hover>a,
-#nav ul li ul li:hover {
-    background: midnightblue;
+#nav ul li ul li:hover a {
+    background: blue;
 }
 
 #nav>ul>li ul {
