--- a/style.css
+++ b/style.css
@@ -10,18 +10,17 @@ header {
     /*background: linear-gradient(45deg, rgba(0, 128, 128, 1) 0%, rgba(255, 255, 255, 1) 25%, rgba(5, 193, 255, 1) 50%, rgba(255, 255, 255, 1) 75%, rgba(0, 87, 87, 1) 100%);*/
     background-size: cover;
     background: linear-gradient(to right, #00f260, #0575e6);
+    padding: 10px;
 }
 
 h1 {
     font-family: sans-serif;
     margin: 0;
-    padding-left: 10px;
     vertical-align: middle;
     color: aliceblue;
 }
 
 header h4 {
-    padding-left: 10px;
     font-family: sans-serif;
     margin: 0;
 }
