--- a/style.css
+++ b/style.css
@@ -18,11 +18,13 @@ h1 {
     margin: 0;
     vertical-align: middle;
     color: aliceblue;
+    text-shadow: 1px 1px 10px black;
 }
 
 header h4 {
     font-family: sans-serif;
     margin: 0;
+    text-shadow: 1px 1px 15px black;
 }
 
 h3 {
