--- a/style.css
+++ b/style.css
@@ -4,6 +4,12 @@ body {
     /*background: linear-gradient(to right, #ada996, #f2f2f2, #dbdbdb, #eaeaea);*/
     background: linear-gradient(to right, #c9d6ff, #e2e2e2);
     overflow-y: scroll;
+    overflow-x: hidden;
+    width: 100%;
+}
+
+p {
+    max-width: 98%;
 }
 
 header {
