--- a/style.css
+++ b/style.css
@@ -2,14 +2,23 @@ body {
     margin: 0;
     padding: 0;
     /*background: linear-gradient(to right, #ada996, #f2f2f2, #dbdbdb, #eaeaea);*/
-    background: linear-gradient(to right, #c9d6ff, #e2e2e2);
+    /*background: linear-gradient(to right, #c9d6ff, #e2e2e2);*/
+    background: linear-gradient(27deg, #151515 5px, transparent 5px) 0 5px, linear-gradient(207deg, #151515 5px, transparent 5px) 10px 0px, linear-gradient(27deg, #222 5px, transparent 5px) 0px 10px, linear-gradient(207deg, #222 5px, transparent 5px) 10px 5px, linear-gradient(90deg, #1b1b1b 10px, transparent 10px), linear-gradient(#1d1d1d 25%, #1a1a1a 25%, #1a1a1a 50%, transparent 50%, transparent 75%, #242424 75%, #242424);
+    background-color: #131313;
+    background-size: 20px 20px;
     overflow-y: scroll;
     overflow-x: hidden;
     width: 100%;
 }
 
-p {
+p,
+h1,
+h2,
+h3,
+h4,
+h5 {
     max-width: 98%;
+    color: white !important;
 }
 
 header {
@@ -215,15 +224,14 @@ hr:after {
 }
 
 #pr img {
-	width:60%;
-	margin-left:20%;
+    width: 60%;
 }
 
 #pr video {
-	width:20%;
-	margin-left:40%;
+    width: 20%;
+    margin-left: 10%;
 }
 
 #mat img {
-	width:70px;
+    width: 70px;
 }
