--- a/style.css
+++ b/style.css
@@ -170,7 +170,7 @@ div {
 
 #prev,
 #next {
-    color: black;
+    color: white;
     padding: 1%;
     margin-left: 35px;
     margin-right: 35px;
