--- a/style.css
+++ b/style.css
@@ -4,9 +4,10 @@ body {
     /*background: linear-gradient(to right, #ada996, #f2f2f2, #dbdbdb, #eaeaea);*/
     /*background: linear-gradient(to right, #c9d6ff, #e2e2e2);*/
     background-color: black;
-    background-image: radial-gradient(white, rgba(255, 255, 255, .2) 2px, transparent 40px), radial-gradient(white, rgba(255, 255, 255, .15) 1px, transparent 30px), radial-gradient(white, rgba(255, 255, 255, .1) 2px, transparent 40px), radial-gradient(rgba(255, 255, 255, .4), rgba(255, 255, 255, .1) 2px, transparent 30px);
-    background-size: 550px 550px, 350px 350px, 250px 250px, 150px 150px;
-    background-position: 0 0, 40px 60px, 130px 270px, 70px 100px;
+    /background-image: radial-gradient(white, rgba(255, 255, 255, .2) 2px, transparent 40px), radial-gradient(white, rgba(255, 255, 255, .15) 1px, transparent 30px), radial-gradient(white, rgba(255, 255, 255, .1) 2px, transparent 40px), radial-gradient(rgba(255, 255, 255, .4), rgba(255, 255, 255, .1) 2px, transparent 30px);
+    /background-size: 550px 550px, 350px 350px, 250px 250px, 150px 150px;
+    /background-position: 0 0, 40px 60px, 130px 270px, 70px 100px;
+    background: url("https://cdn.discordapp.com/attachments/268727299082289162/390951863547330580/Renewable_energy_sources.jpg");
     overflow-y: scroll;
     overflow-x: hidden;
     width: 100%;
