--- a/style.css
+++ b/style.css
@@ -38,19 +38,20 @@ header {
 
 #header2 {
     background: url("bannier3.gif");
-    height: 150px;
+    background-size: cover;
+    height: 100px;
     border: 1px solid white;
 }
 
 #header2 h1 {
     width: 20%;
     float: left;
-    margin-top: 20px;
+    margin-top: 10px;
 }
 
 #header2 #menu {
     width: 80%;
-    margin-top: 50px;
+    margin-top: 30px;
     float: right;
 }
 
