--- a/style.css
+++ b/style.css
@@ -32,21 +32,22 @@ a {
 header {
     background: url("bannier4.jpg");
     background-size: cover;
-    height: 100px;
+    height: 150px;
     padding: 5px;
 }
 
 #header2 h1 {
     width: 20%;
     float: left;
-    margin-top: 15px;
+    margin-top: 45px;
     margin-left: 2%;
 }
 
 #header2 #menu {
     width: 70%;
-    margin-top: 30px;
+    margin-top: 60px;
     float: right;
+    margin-right: 50px;
 }
 
 h1 {
