--- a/style.css
+++ b/style.css
@@ -39,7 +39,9 @@ header {
 #header2 h1 {
     width: 20%;
     float: left;
-    margin-top: 45px;
+    font-size: 200%;
+    text-shadow: 0px 0px 10px rgba(255, 255, 255, .5);
+    margin-top: 15px;
     margin-left: 2%;
 }
 
@@ -98,7 +100,7 @@ h3 {
 }
 
 #nav>ul>li:hover {
-    border-bottom: 3px solid blue;
+    border-bottom: 3px solid white;
 }
 
 #nav>ul>li>a {
@@ -121,9 +123,8 @@ h3 {
     display: none;
     position: absolute;
     z-index: 500;
-    background: rgba(0, 120, 0, 1);
+    background: rgba(0, 0, 0, .9);
     width: 17.3%;
-    box-shadow: 5px 5px 10px black;
     margin-top: 3px;
 }
 
