--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
     margin: 0;
     padding: 0;
-    background: black;
+    background: rgba(10, 10, 30, 1);
     /*background: linear-gradient(to right, #ada996, #f2f2f2, #dbdbdb, #eaeaea);*/
     /*background: linear-gradient(to right, #c9d6ff, #e2e2e2);*/
     /*background-color: black;
