--- a/style.css
+++ b/style.css
@@ -159,7 +159,7 @@ div {
     border-radius: 5px;
     transform: scale(1);
     cursor: pointer;
-    margin-top: 25px;
+    font-family: sans-serif;
     transition: .2s;
 }
 
@@ -171,7 +171,7 @@ div {
 #count {
     text-align: center;
     position: relative;
-    width: 700px;
+    width: 100%;
     margin: 0 auto;
 }
 
@@ -210,7 +210,7 @@ div {
 
 #image {
     display: inline-block;
-    width: 90%;
+    height: 100%;
     box-shadow: 0px 0px 15px white;
 }
 
