--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ body {
     margin: 0;
     padding: 0;
     background: rgba(10, 10, 30, 1);
+    /*background:linear-gradient(to bottom,black,black,black,black,black,black,blue);*/
     /*background: linear-gradient(to right, #ada996, #f2f2f2, #dbdbdb, #eaeaea);*/
     /*background: linear-gradient(to right, #c9d6ff, #e2e2e2);*/
     /*background-color: black;
