--- a/style.css
+++ b/style.css
@@ -269,6 +269,8 @@ table {
     border-collapse: collapse;
     color: white;
     text-align: center;
-    width: 30%;
-    margin-left: 35%;
+    width: 40%;
+    margin-left: 30%;
+    font-family: sans-serif;
+    font-size: 150%;
 }
