BETTER FONT-FAMILY FOR H4

--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ header {
     padding: 5px;
 }
 
-#header2 h1 {
+header h1 {
     width: 20%;
     float: left;
     font-size: 200%;
@@ -59,6 +59,10 @@ header h4 {
 }
 
 h3 {
+    font-family: sans-serif;
+}
+
+h4 {
     font-family: sans-serif;
 }
 
