--- a/style.css
+++ b/style.css
@@ -52,8 +52,7 @@ h1 {
     font-family: sans-serif;
     margin: 0;
     vertical-align: middle;
-    color: aliceblue;
-    text-shadow: 1px 1px 10px black;
+    color: white;
 }
 
 header h4 {
@@ -64,6 +63,7 @@ header h4 {
 
 h3 {
     font-family: sans-serif;
+    text-shadow: 0px 0px 5px rgba(255, 255, 255, .5);
 }
 
 h4 {
@@ -231,6 +231,7 @@ section h2 {
     text-align: center;
     font-size: 200%;
     letter-spacing: .5em;
+    text-shadow: 0px 0px 5px rgba(255, 255, 255, .5);
 }
 
 section p {
