--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ header h1 {
     width: 20%;
     float: left;
     font-size: 200%;
-    text-shadow: 0px 0px 10px rgba(255, 255, 255, .5);
+    text-shadow: 0 0 10px rgba(255, 255, 255, .5);
     margin-top: 15px;
     margin-left: 2%;
 }
