--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ body {
     margin: 0;
     padding: 0;
     background: rgba(10, 10, 30, 1);
+    background: repeating-radial-gradient( circle at 0 0, rgb(10, 10, 30), rgb(20, 20, 60) 50px);
     overflow-y: scroll;
     overflow-x: hidden;
     width: 100%;
