--- a/style.css
+++ b/style.css
@@ -18,6 +18,14 @@ h5 {
     clear: both;
 }
 
+p,
+h3,
+h4,
+h5 {
+    padding-left: 20px;
+    padding-top: 1px;
+}
+
 a {
     color: lightgreen;
 }
@@ -219,7 +227,6 @@ section {
 }
 
 #content {
-    padding: 1px 20px;
     min-height: 1000px;
 }
 
@@ -252,6 +259,8 @@ hr {
 
 hr:after {
     content: "\273D \273D \273D";
+    color: white;
+    text-shadow: 0px 0px 10px green;
 }
 
 #pb {
