--- a/style.css
+++ b/style.css
@@ -2,9 +2,11 @@ body {
     margin: 0;
     padding: 0;
     background: repeating-radial-gradient( circle at 50% 215px, rgb(10, 10, 30), rgb(20, 20, 60) 50px);
+    background-size: cover;
     overflow-y: scroll;
     overflow-x: hidden;
     width: 100%;
+    height: 100%;
 }
 
 p,
@@ -219,6 +221,10 @@ div {
     display: inline-block;
     height: 100%;
     box-shadow: 0px 0px 15px white;
+}
+
+#content {
+    min-height: 1000px;
 }
 
 section {
