ADDED USEFUL CONTENT

--- a/style.css
+++ b/style.css
@@ -235,6 +235,10 @@ div {
     box-shadow: 0px 0px 15px white;
 }
 
+#content {
+    min-height: 400px;
+}
+
 section {
     width: 100%;
     clear: both;
